--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 		"start:prod": "node dist/main",
 		"dev": "cross-env NODE_ENV=development nest start --watch",
 		"prod": "cross-env NODE_ENV=production node dist/main",
+		"studio": "npx prisma studio",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -25,11 +26,21 @@
 		"@nestjs/common": "^11.0.1",
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.0.1",
+		"@nestjs/jwt": "^11.0.1",
 		"@nestjs/mapped-types": "*",
+		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.0.1",
 		"@nestjs/swagger": "^11.2.3",
+		"@prisma/adapter-pg": "^7.0.1",
 		"@prisma/client": "^7.0.0",
+		"@prisma/client-runtime-utils": "^7.0.1",
+		"@types/bcrypt": "^6.0.0",
+		"@types/passport-jwt": "^4.0.1",
+		"bcrypt": "^6.0.0",
 		"class-validator": "^0.14.2",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"pg": "^8.16.3",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1"
 	},
